[package]
name = "redis_session"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.5.7", features = ["json", "headers"] }
tokio = { version = "1.18.0", features = ["full"] }
axum-extra = { version = "0.3.4", features = ["cookie", "cookie-signed", "form"] }
async-session = "3.0.0"
async-redis-session = "0.2.2"
redis = { version = "=0.20.2", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
axum-sessions = { path = "../../" }
